--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /public/build
 /public/hot
 # /public/storage
-/storage/*.key
+# /storage/*.key
 /vendor
 .env
 .env.backup
@@ -16,3 +16,6 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+# Allow Voyager images
+!storage/app/public
+!storage/app/public/**
